--- a/adminLogin.html
+++ b/adminLogin.html
@@ -3,6 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Animated Login Form | CodingNepal</title>
     <link rel="stylesheet" href="adminLoginStyle.css">
   </head>
@@ -20,11 +21,11 @@
           <span></span>
           <label>Password</label>
         </div>
-        <div class="pass">Forgot Password?</div>
+        <!-- <div class="pass">Forgot Password?</div> -->
         <input type="submit" value="Login">
-        <div class="signup_link">
+        <!-- <div class="signup_link">
           Not a member? <a href="#">Signup</a>
-        </div>
+        </div> -->
       </form>
     </div>
 
