sidebar added in admin dashboard

--- a/html/studentFacultyLogin.html
+++ b/html/studentFacultyLogin.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Student/Faculty</title>
-    <link rel="stylesheet" href="studentFacultyLoginStyle.css">
+    <link rel="stylesheet" href="/css/studentFacultyLogin.css">
 
 </head>
 
@@ -46,7 +46,7 @@
             <input type="submit" value="Login">
         </form>
     </div>
-    <script src="studentFacultyLogin.js"></script>
+    <script src="/js/studentFacultyLogin.js"></script>
 </body>
 
 </html>
