--- a/html/adminLogin.html
+++ b/html/adminLogin.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Animated Login Form | CodingNepal</title>
-    <link rel="stylesheet" href="adminLoginStyle.css">
+    <link rel="stylesheet" href="/css/adminLogin.css">
   </head>
   <body>
     <div class="center">
