--- a/html/adminLogin.html
+++ b/html/adminLogin.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>Animated Login Form | CodingNepal</title>
+    <title>Admin Login</title>
     <link rel="stylesheet" href="/css/adminLogin.css">
   </head>
   <body>
