--- a/html/studentFacultyLogin.html
+++ b/html/studentFacultyLogin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>Student/Faculty</title>
+    <title>Student/Faculty Login</title>
     <link rel="stylesheet" href="/css/studentFacultyLogin.css">
 
 </head>
