--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="wrapper">
-        <a href="adminLogin.html" class="btns">Admin</a>
-        <a href="studentFacultyLogin.html" class="btns">Student/Faculty</a>
+        <a href="html/adminLogin.html" class="btns">Admin</a>
+        <a href="html/studentFacultyLogin.html" class="btns">Student/Faculty</a>
     </div>
 </body>
 </html>
