faculty-section-cards-added

--- a/html/adminDashboard.html
+++ b/html/adminDashboard.html
@@ -51,105 +51,7 @@
   </div>
   <section class="main">
     <div class="item home">
-      <div class="container">
-        <div class="header">
-          <div>Faculty</div>
-          <button type="button" class="addBtn">
-            <span>Add</span>
-          </button>
-        </div>
-        <div class="data">
-          <div class="filter">
-            <form action="" class="filter">
-              <input type="text" placeholder="Filter" id="filter-value">
-            </form>
-          </div>
-          <table>
-            <!-- <colgroup>
-              <col span="1" style="width: 40%;">
-              <col span="1" style="width: 40%;">
-              <col span="1" style="width: 20%;">
-            </colgroup> -->
-            <thead>
-              <tr>
-                <th>Id</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th style="width: 20%;"></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>vishal</td>
-                <td>bhangare</td>
-                <td>
-                  <button type="button" class="editBtn">
-                    <span>Edit</span>
-                  </button>
-                  <button type="button" class="deleteBtn">
-                    <span>Remove</span>
-                  </button>
-                </td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>akash</td>
-                <td>tiwari</td>
-                <td>
-                  <button type="button" class="editBtn">
-                    <span>Edit</span>
-                  </button>
-                  <button type="button" class="deleteBtn">
-                    <span>Remove</span>
-                  </button>
-                </td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>ritesh</td>
-                <td>tiwari</td>
-                <td>
-                  <button type="button" class="editBtn">
-                    <span>Edit</span>
-                  </button>
-                  <button type="button" class="deleteBtn">
-                    <span>Remove</span>
-                  </button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <div class="pages">
-            <span>Items per page:</span>
-            <div class="select-menu">
-              <div class="select-btn">
-                  <span class="sBtn-text">10</span>
-                  <i class="bx bx-chevron-down"></i>
-              </div>
-      
-              <ul class="options">
-                  <li class="option">
-                      <span class="option-text">10</span>
-                  </li>
-                  <li class="option">
-                      <span class="option-text">25</span>
-                  </li>
-                  <li class="option">
-                      <span class="option-text">50</span>
-                  </li>
-              </ul>
-          </div>
-          <span>11 - 20 of 50</span>
-          <div class="nav">
-            <i class='bx bx-skip-previous'></i>
-            <i class='bx bx-chevron-left'></i>
-            <i class='bx bx-chevron-right'></i>
-            <i class='bx bx-skip-next'></i>
-          </div>
-          </div>
-        </div>
-      </div>
+
 
       <!-- buttons with text and icons -->
       <!-- <button type="button" class="button">
@@ -173,6 +75,150 @@
     <!-- <span>home Panel</span> -->
     </div>
     <div class="item faculty">
+      <div class="container">
+
+        <div class="header">
+          <div>Faculty</div>
+          <button type="button" class="addBtn">
+            <span>Add</span>
+          </button>
+        </div>
+        <div class="data">
+          <div class="filter">
+            <form action="" class="filter">
+              <input type="text" placeholder="Filter" id="filter-value">
+            </form>
+          </div>
+          <table>
+            <thead>
+              <tr>
+                <th style="width:5%;">Id</th>
+                <th style="width: 20%;" class="name-field">Name</th>
+                <!-- <th>Last Name</th> -->
+                <th>DOB</th>
+                <!--  <th>Email</th>
+                <th>Contact no</th>
+                <th>Address</th> -->
+                <th>Department</th>
+                <th>Designation</th>
+                <th style="width: 20%;"></th>
+              </tr>
+            </thead>
+            <tbody>
+<!--<td>Pandey</td> -
+                <td>johnpandey@rediff.com</td>
+                <td>919898912818</td>
+                <td>101/E, Anand vilas,satara road, pune-410002Maharashtra</td> -->
+              <tr>
+                <td>1</td>
+                <td>John Pandey</td>
+                <td>1990-11-21</td>
+                <td>Computer Science</td>
+                <td>Assi. Professor</td>
+                <td>
+                  <button type="button" class="editBtn">
+                    <span>Edit</span>
+                  </button>
+                  <button type="button" class="removeBtn">
+                    <span>Remove</span>
+                  </button>
+                </td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Jasn Pandey</td>
+                <td>1992-12-22</td>
+                <td>Computer Science</td>
+                <td>Professor</td>
+                <td>
+                  <button type="button" class="editBtn">
+                    <span>Edit</span>
+                  </button>
+                  <button type="button" class="removeBtn">
+                    <span>Remove</span>
+                  </button>
+                </td>
+              </tr>
+
+            </tbody>
+          </table>
+
+          <div class="pages">
+            <span>Items per page:</span>
+            <div class="select-menu">
+              <div class="select-btn">
+                <span class="sBtn-text">10</span>
+                <i class="bx bx-chevron-down"></i>
+              </div>
+
+              <ul class="options">
+                <li class="option">
+                  <span class="option-text">10</span>
+                </li>
+                <li class="option">
+                  <span class="option-text">25</span>
+                </li>
+                <li class="option">
+                  <span class="option-text">50</span>
+                </li>
+              </ul>
+            </div>
+            <span>11 - 20 of 50</span>
+            <div class="nav">
+              <i class='bx bx-skip-previous'></i>
+              <i class='bx bx-chevron-left'></i>
+              <i class='bx bx-chevron-right'></i>
+              <i class='bx bx-skip-next'></i>
+            </div>
+          </div>
+        </div>
+        <div class="card-background">
+          <div class="card"> 
+            <i class='bx bx-x close-card'></i>
+            <span>id</span>:<span id="id"></span>
+            <span>Name</span>:<span id="name"></span>
+            <span>DOB</span>:<span id="dob"></span>
+            <span>Email</span>:<span id="email"></span>
+            <span>Contact no</span>:<span id="contact"></span>
+            <span>Address</span>:<span id="address"></span>
+            <span>Department</span>:<span id="department"></span>
+            <span>Designation</span>:<span id="designation"></span>
+          </div>
+        </div>
+        <div class="card-background2">
+          <form action="">
+          <div class="card"> 
+              <span>id</span>:<input type="text" id="id" >
+              <span>Name</span>:<input type="text" id="name">
+              <span>DOB</span>:<input type="text" id="dob">
+              <span>Email</span>:<input type="email" id="email">
+              <span>Contact no</span>:<input type="text" id="contact">
+              <span>Address</span>:<input type="text" id="address">
+              <span>Department</span>:<input type="text" id="department">
+              <span>Designation</span>:<input type="designation" id="id">
+              <div id="btns">
+                <button type="button" class="saveBtn">Save</button>
+                <button type="button" class="closeBtn">
+                  <span>Close</span>
+              </div>
+              </button>
+            </div>
+          </form>
+
+        </div>
+        <div class="card-background3">
+          <div class="card"> 
+            <i class='bx bx-error'></i>
+            <span>Remove Faculty</span>
+            <span>Are you sure you want to deactivate your account? All of your data will be permanently removed. This action cannot be undone.</span>
+            <button type="button" class="removeBtn">
+              <span>Remove</span>
+            </button>
+            <button type="button" class="cancelBtn">
+              <span>Cancel</span>
+          </div>
+        </div>
+      </div>
       <!-- <span>faculty Panel</span> -->
     </div>
     <div class="item students">
