--- a/html/adminDashboard.html
+++ b/html/adminDashboard.html
@@ -92,14 +92,14 @@
           <table>
             <thead>
               <tr>
-                <th style="width:5%;">Id</th>
-                <th style="width: 20%;" class="name-field">Name</th>
+                <th id="id" style="width:5%;">Id</th>
+                <th id="name" style="width: 20%;" class="name-field">Name</th>
                 <!-- <th>Last Name</th> -->
-                <th>DOB</th>
+                <th id="dob">DOB</th>
                 <!--  <th>Email</th>
                 <th>Contact no</th>
                 <th>Address</th> -->
-                <th>Department</th>
+                <th id="department">Department</th>
                 <th>Designation</th>
                 <th style="width: 20%;"></th>
               </tr>
