student dashboard files created

--- a/html/facultyDashboard.html
+++ b/html/facultyDashboard.html
@@ -705,6 +705,11 @@
 
             </tbody>
           </table>
+          <div class="submitAttendance">
+            <input type="checkbox" name="" id="confirmAttendance">
+             Confirm Attendance
+            <button type="button" id="submitAttendanceBtn" class="Btn">Submit</button>
+          </div>
         </div>
       </div>
     </div>
