--- a/html/adminDashboard.html
+++ b/html/adminDashboard.html
@@ -104,7 +104,7 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
+                <!-- <tr>
                   <td>1</td>
                   <td>John Pandey</td>
                   <td>1990-11-21</td>
@@ -118,23 +118,8 @@
                       <span>Remove</span>
                     </button>
                   </td>
-                </tr>
-                <tr>
-                  <td>2</td>
-                  <td>Jasn Pandey</td>
-                  <td>1992-12-22</td>
-                  <td>Computer Science</td>
-                  <td>Professor</td>
-                  <td>
-                    <button type="button" class="editBtn">
-                      <span>Edit</span>
-                    </button>
-                    <button type="button" class="removeBtn">
-                      <span>Remove</span>
-                    </button>
-                  </td>
-                </tr>
-  
+                </tr> -->
+
               </tbody>
             </table>
           </div>
@@ -190,11 +175,12 @@
             <span>Contact no</span>:<input type="number" maxlength="10" id="contact"
               oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
 
-            <span>Address</span>: <textarea name="" id="address" cols="30" rows="2"></textarea>           <!-- <input type="text" id="address"> -->
+            <span>Address</span>: <textarea name="" id="address" cols="30" rows="2"></textarea>
+            <!-- <input type="text" id="address"> -->
             <span>Department</span>:<input type="text" id="department">
-            <span>Designation</span>:<input type="designation" id="designation" >
+            <span>Designation</span>:<input type="designation" id="designation">
             <div id="btns">
-              <button type="button" class="saveBtn">Save</button>
+              <button type="button" class="addBtn">Add</button>
               <button type="button" class="closeBtn">
                 <span>Close</span>
             </div>
@@ -215,6 +201,28 @@
               <span>Cancel</span>
           </div>
         </div>
+        <div class="card-background4">
+          <div class="card">
+            <span>id</span>:<input type="text" id="id" disabled>
+            <span>Name</span>:<input type="text" id="name">
+            <span>DOB</span>:<input type="date" id="dob">
+            <span>Email</span>:<input type="email" id="email">
+            <span>Contact no</span>:<input type="number" maxlength="10" id="contact"
+              oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
+
+            <span>Address</span>: <textarea name="" id="address" cols="30" rows="2"></textarea>
+            <!-- <input type="text" id="address"> -->
+            <span>Department</span>:<input type="text" id="department">
+            <span>Designation</span>:<input type="designation" id="designation">
+            <div id="btns">
+              <button type="button" class="saveBtn">Save</button>
+              <button type="button" class="closeBtn">
+                <span>Close</span>
+            </div>
+            </button>
+          </div>
+
+        </div>
       </div>
 
       <div id="error-msg"></div>
@@ -231,87 +239,9 @@
     </div>
   </section>
 
+  <script src="/res/jquery-3.6.4.min.js"></script>
   <script src="/js/adminDashboard.js"></script>
 
-  <script src="/res/jquery-3.6.4.min.js"></script>
-  <script>
-
-    $(document).ready(function () {
-      $(".card-background2 .saveBtn").on("click", (btn) => {
-
-        btn.preventDefault();
-        var name = $(".card-background2 #name");
-        var dob = $(".card-background2 #dob");
-        var email = $(".card-background2 #email");
-        var contact = $(".card-background2 #contact");
-        var address = $(".card-background2 #address");
-        var department = $(".card-background2 #department");
-        var designation = $(".card-background2 #designation");
-
-        if (name.val() == "" || dob.val() == "" || email.val() == "" || contact.val() == "" || address.val() == "" || department.val() == "" || designation.val() == "") {
-          $("#error-msg").html("All field are required").slideDown().delay(2000).slideUp();
-        } 
-        else {
-          $.ajax({
-            url: "/php/admin.php",
-            type: "POST",
-            data: {
-              action: "addFaculty",
-              name: name.val(),
-              dob: dob.val(),
-              email: email.val(),
-              contact: contact.val(),
-              address: address.val(),
-              department: department.val(),
-              designation: designation.val(),
-            },
-            success: function (data) {
-              console.log(data);
-              if (data == 1) {
-                name.val("");
-                dob.val("");
-                email.val("");
-                contact.val("");
-                address.val("");
-                department.val("");
-                designation.val("");
-                $("#success-msg").html("Faculty Added").slideDown().delay(2000).slideUp();
-                loadData();
-              }
-              else if (data == 0) {
-                name.val("");
-                dob.val("");
-                email.val("");
-                contact.val("");
-                address.val("");
-                department.val("");
-                designation.val("");
-                $("#error-msg").html("Error occured !!!").slideDown().delay(2000).slideUp();
-              }
-            }
-          })
-        }
-      })
-      function loadData(){
-        $.ajax({
-          url: "/php/admin.php",
-            type: "POST",
-            data: {action: "loadData" },
-            success: function (data) {
-              $("#table-data").empty()
-              $("#table-data").append(data);
-              
-            }
-        })
-      }
-      $("#facultyBtn").on("click", (btn) => {
-        ;
-        loadData()
-      })
-    });
-
-
-  </script>
 </body>
 
 </html>
